[gd_scene load_steps=14 format=3 uid="uid://b4vu306w0k4ia"]

[ext_resource type="Script" path="res://scripts/entities/entity.gd" id="1_vebnh"]
[ext_resource type="Script" path="res://scripts/health/health_tracker.gd" id="2_8s5dq"]
[ext_resource type="Script" path="res://scripts/items/instantiate_on_exit.gd" id="3_rpm1m"]
[ext_resource type="PackedScene" uid="uid://bpj1aj0eh5h55" path="res://scenes/items/experience_drop.tscn" id="4_5ofwd"]
[ext_resource type="Texture2D" uid="uid://onhpoqcmxp7r" path="res://icon.svg" id="5_qp20e"]
[ext_resource type="Script" path="res://scripts/entities/state_machine/target_tracker.gd" id="6_lv3dg"]
[ext_resource type="Script" path="res://scripts/entities/state_machine/state_machine.gd" id="7_qg8e2"]
[ext_resource type="Script" path="res://scripts/entities/state_machine/set_player_target_state.gd" id="8_bggy3"]
[ext_resource type="Script" path="res://scripts/entities/state_machine/follow_target_state.gd" id="9_fdpjd"]
[ext_resource type="Script" path="res://scripts/attacks/attack_area.gd" id="10_kio8k"]
[ext_resource type="SpriteFrames" uid="uid://b7v75jip16wrq" path="res://assets/sprites/attack_placeholder_animation.tres" id="11_jcc07"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bm50p"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l7rto"]
radius = 77.2

[node name="AssassinEnemy" type="CharacterBody2D"]
collision_layer = 9
collision_mask = 17
motion_mode = 1
script = ExtResource("1_vebnh")
move_speed = 6000.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="HealthTracker" type="Node" parent="."]
script = ExtResource("2_8s5dq")
death_event = "enemy_dead"

[node name="InstantiateOnExit" type="Node" parent="."]
script = ExtResource("3_rpm1m")
scene = ExtResource("4_5ofwd")

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -64.0
offset_right = 56.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10.0

[node name="Enemy" type="Sprite2D" parent="."]
modulate = Color(0.894276, 0, 0.214811, 1)
scale = Vector2(0.35, 0.35)
texture = ExtResource("5_qp20e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bm50p")

[node name="TargetTracker" type="Node" parent="."]
script = ExtResource("6_lv3dg")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("7_qg8e2")
states = {
"FindTarget": NodePath("FindTargetState"),
"TrackTarget": NodePath("FollowTargetState")
}
current_state = "FindTarget"

[node name="FindTargetState" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("target_tracker")]
script = ExtResource("8_bggy3")
target_tracker = NodePath("../../TargetTracker")
detected_state = "TrackTarget"

[node name="FollowTargetState" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("target_tracker", "character_body", "nav_agent")]
script = ExtResource("9_fdpjd")
target_tracker = NodePath("../../TargetTracker")
character_body = NodePath("../..")
nav_agent = NodePath("../../NavigationAgent2D")
target_lost_state = &"FindTarget"

[node name="AttackArea" type="Area2D" parent="StateMachine/FollowTargetState" node_paths=PackedStringArray("hit_animation")]
collision_layer = 0
collision_mask = 6
monitorable = false
script = ExtResource("10_kio8k")
damage = 5.0
stun_duration = 0.5
damage_event = "enemy_dealt_damage"
hit_animation = NodePath("AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/FollowTargetState/AttackArea"]
shape = SubResource("CircleShape2D_l7rto")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StateMachine/FollowTargetState/AttackArea"]
modulate = Color(1, 0.290196, 0.294118, 1)
position = Vector2(39, -6)
scale = Vector2(3, 3)
sprite_frames = ExtResource("11_jcc07")
frame = 4
frame_progress = 1.0

[connection signal="death" from="HealthTracker" to="InstantiateOnExit" method="_instantiate"]
[connection signal="health_changed" from="HealthTracker" to="ProgressBar" method="set_value"]
